# 2023_1_Rabotyagi

./: .gitignore  CMakeLists.txt  README.md  authorization.pro  data_base_table.cpp  db.mdj  docker-compose.yml  guild.cpp  loginwindow.cpp  loginwindow.h  loginwindow.ui  message.cpp  registrationwindow.cpp  registrationwindow.h  registrationwindow.ui  user.cpp  usercontrol.cpp  usercontrol.h
Test/: tst_mycasename.cpp
Tests/authorization_tests/: authorization_tests.pro  gtest_dependency.pri  tst_my_test.h
client/ITSwarm/: ITSwarm.pro  main.cpp  test.cpp
client/ITSwarm/Tests/Google_tests/: Google_tests.pro  gtest_dependency.pri  json_test.cpp  json_test.h  main.cpp
client/ITSwarm/controls/: serverbutton.cpp  serverbutton.h  serverbutton.ui
client/ITSwarm/controls/channel_control/: channelcontrol.h
client/ITSwarm/controls/client/: iclient.cpp  iclient.h  tcpclient.cpp  tcpclient.h
client/ITSwarm/controls/data_types/: request.h
client/ITSwarm/controls/message_control/: messagecontrol.cpp  messagecontrol.h
client/ITSwarm/controls/user_control/: user_control.cpp  user_control.h
client/ITSwarm/static/: icons.qrc  images.qrc
client/ITSwarm/static/icons/: free-icon-hammer-and-sickle-7352591.pngZone.Identifier
client/ITSwarm/windows/channel_add/: channel_add.cpp  channel_add.h  channel_add.ui
client/ITSwarm/windows/channel_widget/: channelsidebar.cpp  channelsidebar.h
client/ITSwarm/windows/connect_to_guild/: guildconnector.cpp  guildconnector.h  (+1 more)
client/Tests/: Tests.pro  gtest_dependency.pri  tst_case1.cpp
client/Tests/authorization_tests/: authorization_tests.pro  main.cpp  tst_my_test.cpp  tst_my_test.h
client/test_server/: Server.pro  main.cpp  server.h
client2/ITSwarm/: ITSwarm.pro  main.cpp  qrc_icons.cpp
db/: CMakeLists.txt  build.sh  channel.cpp  data_base_table.cpp  user.cpp
db/data_types/graphs/: data_types.dot
db/lib/: CMakeLists.txt  channel.cpp
db/lib/data_types/: CMakeLists.txt  base_data_type.cpp  channel_data_type.cpp  guild_data_type.cpp  message_data_type.cpp  user_data_type.cpp
db/lib/tables/: CMakeLists.txt  channel.cpp  data_base_table.hpp  guild.cpp  message.cpp  user.cpp
db/server_connector/: CMakeLists.txt  main.cpp  user_connection.cpp  user_connection.hpp  user_connection_backend.cpp  user_connection_backend.hpp
db/server_connector/graphs/: server_connector.dot.ThreadsThreads.dependers  server_connector.dot.data_types.dependers  server_connector.dot.gtest  server_connector.dot.gtest.dependers  server_connector.dot.server_connector.dependers
db/server_connector/include/: headers.hpp  user_connection_backend.hpp
db/server_connector/tests/: CMakeLists.txt  connector_backend_tests.cpp  connector_backend_tests.hpp  connector_tests.cpp
db/tables/graphs/: tables.dot.PostgreSQLPostgreSQL.dependers  tables.dot.ThreadsThreads.dependers  tables.dot.data_types.dependers  tables.dot.gmock_main  tables.dot.tables
db/tables/src/: guild.cpp
include/: ITSwarm.pro  channelcontrol.h  channelsidebar.h  client.h  connection.h  contentwindow.h  guild.h  mainwindow.h  message.h  peermanager.h  sidebar.h
include/authorization/: authorization.pro  loginwindow.h
include/main/: ITSwarm.pro  channel.h  channelcontrol.h  chatdialog.h  client.h  contentwindow.h  icons.qrc  mainwindow.h  messagecontrol.h  server.h
server/: CMakeLists.txt  Dockerfile  connetor.cpp  docker-compose.yml  main.cpp  server.cpp  test.cpp  udp_client.cpp  udp_server.cpp
server/include/: server.hpp
server/libs/: CMakeLists.txt  request.hpp  server.hpp  url_dispatcher.hpp  view.hpp
server/libs/Request/: CMakeLists.txt
server/libs/Server/: CMakeLists.txt  server.hpp
server/libs/data_types/include/: data_types.hpp
server/libs/db/: main.cpp
server/libs/db/data_types/: CMakeCache.txt  CMakeLists.txt  data_types.cpp
server/libs/db/server_connector/graphs/: server_connector.dot  server_connector.dot.PostgreSQLPostgreSQL.dependers  server_connector.dot.gmock.dependers  server_connector.dot.gmock_main.dependers  server_connector.dot.gtest_main  server_connector.dot.gtest_main.dependers  server_connector.dot.server_connector  server_connector.dot.test
server/libs/db/server_connector/include/: server_connector.hpp  user_connection.hpp
server/libs/db/server_connector/src/: server_connector.cpp  user_connection.cpp  user_connection_backend.cpp
server/libs/db/server_connector/tests/: add_test.cpp  connector_tests.hpp  tests.cpp
server/libs/db/tables/: CMakeLists.txt
server/libs/db/tables/graphs/: tables.dot  tables.dot.IMPORTED.dependers  tables.dot.gmock  tables.dot.gmock.dependers  tables.dot.gtest.dependers
server/libs/db/tables/include/: channel.hpp  data_base_table.hpp  guild.hpp  headers.hpp  message.hpp  user.hpp
server/libs/db/tables/src/: channel.cpp  data_base_table.cpp  message.cpp  tables.cpp  user.cpp
server/libs/dispatcher/: CMakeLists.txt
server/libs/dispatcher/include/: request.hpp  url_dispatcher.hpp  view.hpp
server/libs/dispatcher/src/: dispatcher.cpp
server/libs/dispatcher/tests/: tests.cpp
server/libs/request/: CMakeLists.txt
server/libs/request/include/: request.hpp
server/libs/request/include/data_types/: CMakeLists.txt
server/libs/request/tests/: request_tests.hpp  tests.cpp
server/server_express/: .env  Dockerfile  manage.py  requirements.txt  test.py
server/server_express/api/: admin.py  models.py  urls.py  views.py
server/server_express/api/migrations/: 0001_initial.py  0002_guild_users.py  0003_alter_channel_updated_at_alter_guild_user_count_and_more.py
server/server_express/server_express/: asgi.py  settings.py  urls.py  wsgi.py
server/tests/: CMakeLists.txt  client_tests.hpp  dispatcher_tests.hpp  request_tests.hpp  server_tests.hpp
src/: channelsidebar.cpp  client.cpp  connection.cpp  contentwindow.cpp  main.cpp  mainwindow.cpp  message.cpp  peermanager.cpp  sidebar.cpp
src/authorization/: main.cpp
src/main/: channel.cpp  chatdialog.cpp  client.cpp  contentwindow.cpp  main.cpp  messagecontrol.cpp  server.cpp
test_server/: server.cpp  server.h
ui/main/: userbar.ui
(+66 files in other folders)
